# daphne

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  POLICIES.md  README.md  ROADMAP.md  justfile
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: provider-configuration.md
migrations/: 0001_initial.sql  README.md  V10__project_hierarchy.sql  V2__account_provider_config.sql  V3__operational_history_and_occurrence_metadata.sql  V4__logs_and_notification_cooldown_foundation.sql  V5__organization_user_membership_foundation.sql  V6__clerk_org_id.sql  V7__seed_clerk_org_id.sql  V8__clerk_user_id.sql  V9__api_keys.sql
policies/: create_ticket.policy  create_ticket.schema.json  escalate_repeat.policy  escalate_repeat.schema.json  send_notification.policy  send_notification.schema.json  use_ai.policy  use_ai.schema.json
seed/: dev.sql
src/: api.rs  config.rs  domain.rs  feature_flags.rs  lib.rs  logging.rs  main.rs  migrations.rs  providers.rs  repository.rs  service.rs  test_support.rs
src/ai/: claude.rs  codex.rs  kimi.rs  mod.rs  tests.rs
src/api/: mod.rs  tests.rs
src/domain/: mod.rs
src/notifications/: mod.rs  resend.rs  slack.rs  teams.rs  tests.rs
src/policy/: mod.rs  tests.rs
src/providers/: ai.rs  jira.rs  linear.rs  mod.rs  resend.rs  slack.rs  teams.rs  tests.rs  tracklines.rs
src/repository/: mod.rs  tests.rs
src/service/: mod.rs  tests.rs
src/service/fixtures/: go_equivalent_a.txt  go_equivalent_b.txt  rust_distinct_a.txt  rust_distinct_b.txt  rust_equivalent_b.txt
src/ticketing/: github.rs  jira.rs  linear.rs  mod.rs  tests.rs  tracklines.rs
