[package]
name = "bugfixes"
version = "0.1.0"
edition = "2024"

[features]
default = []
flagsgg = ["dep:flags-rs"]

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
dotenvy = "0.15.7"
flags-rs = { version = "0.1.11", optional = true }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "any"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[dev-dependencies]
serial_test = "3.2.0"
testcontainers = { version = "0.27.1", features = ["blocking"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
